[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image_utils"
version = "0.0.1"
authors = [{ name="Alexander Swerdlow", email="aswerdlow1@gmail.com" }]
description = "A utility library for common image and video operations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "torchvision",
    "opencv-python>=4.5",
    "numpy>=1.22",
    "pillow>=9.0.0",
    "einops>=0.6.0",
    "StrEnum>=0.4.9",
    "jaxtyping>=0.2.25"
]

[project.optional-dependencies]
VIDEO = ["av>=10.0.0", "imageio[ffmpeg]>=2.23.0"]
PROC = ["joblib>=1.2.0"]
DEV = ["pytest", "lovely-tensors>=0.1.14", "lovely-numpy>=0.2.8"]
ALL = ["image_utils[VIDEO,PROC,DEV]"]

[project.urls]
Homepage = "https://github.com/alexanderswerdlow/image_utils"

[tool.black]
line-length = 150
target-version = ['py310']