[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image_utilities"
version = "0.0.2.dev1"
authors = [{ name="Alexander Swerdlow", email="aswerdlow1@gmail.com" }]
description = "A utility library for common image and video operations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.17",
    "pillow>=8.0.0",
    "einops>=0.3.0",
    "jaxtyping>=0.2.19"
]

[project.optional-dependencies]
TORCH = ["torch", "torchvision"]
VIDEO = ["av>=10.0.0", "imageio[ffmpeg]>=2.23.0"]
PROC = ["joblib>=1.2.0"]
DEV = ["pytest", "pytest-cov", "lovely-tensors>=0.1.14", "lovely-numpy>=0.2.8", "opencv-python"]
ALL = ["image_utils[TORCH,VIDEO,PROC,DEV]"]

[project.urls]
Homepage = "https://github.com/alexanderswerdlow/image_utils"

[tool.black]
line-length = 150
target-version = ['py310']

[tool.hatch.build.targets.wheel]
packages = ["src/image_utils", "src/im"]

